# update_resume

./: README.md  pyproject.toml
.github/workflows/: daily_update.yml
naukari_bot/: main.py
